wip Templated test